work in progress for idaholab/Malcolm#77, automatically generate Zeek intelligence indicators from MISP

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4990,12 +4990,35 @@ filter {
     #############################################################################################################################
     # intel.log specific logic
 
-    if ([zeek][intel][sources]) { mutate { id => "mutate_split_zeek_intel_sources"
-                                          split => { "[zeek][intel][sources]" => "," } } }
+    if ([zeek][intel][sources])  { mutate { id => "mutate_split_zeek_intel_sources"
+                                            split => { "[zeek][intel][sources]" => "," } } }
 
-    if ([zeek][intel][matched]) { mutate { id => "mutate_split_zeek_intel_matched"
-                                          split => { "[zeek][intel][matched]" => "," } } }
+    if ([zeek][intel][matched])  { mutate { id => "mutate_split_zeek_intel_matched"
+                                             split => { "[zeek][intel][matched]" => "," } } }
 
+    if ([zeek][intel][cif_tags]) { mutate { id => "mutate_split_zeek_intel_cif_tags"
+                                            split => { "[zeek][intel][cif_tags]" => "," } } }
+
+    if ([zeek][intel][sources]) or ([zeek][intel][cif_tags]) {
+      ruby {
+        id => "ruby_zeek_intel_sources_and_tags_comma_fix"
+        code => "
+          if (sources = event.get('[zeek][intel][sources]')) and (sources.length > 0) then
+            sourcesAdj = Array.new
+            sources.each do |val|
+              sourcesAdj.push(val.gsub('\\x2c', ','))
+            end
+            event.set('[zeek][intel][sources]', sourcesAdj)
+          end
+          if (tags = event.get('[zeek][intel][cif_tags]')) and (tags.length > 0) then
+            tagsAdj = Array.new
+            tags.each do |val|
+              tagsAdj.push(val.gsub('\\x2c', ','))
+            end
+            event.set('[zeek][intel][cif_tags]', tagsAdj)
+          end"
+      }
+    }
 
   } else if ([log_source] == "kerberos") {
     #############################################################################################################################
