added severity scoring category for intelligence

--- a/logstash/maps/malcolm_severity.yaml
+++ b/logstash/maps/malcolm_severity.yaml
@@ -14,6 +14,7 @@
 "Connection attempt, no reply": 20
 "Country of concern": 40
 "High entropy domain": 0
+"Intelligence": 80
 "File transfer": 0
 "File transfer (high concern)": 75
 "File transfer (medium concern)": 50
