--- a/logstash/pipelines/zeek/19_severity.conf
+++ b/logstash/pipelines/zeek/19_severity.conf
@@ -61,6 +61,12 @@ filter {
       }
     }
 
+    # intel logs get one score at the moment
+    if ([zeek][intel]) {
+      mutate { id => "mutate_add_field_severity_intel_other"
+               add_field => { "[event][severity_tags]" => "Intelligence" } }
+    }
+
     # weird logs get one score at the moment
     if ([zeek][weird]) {
       mutate { id => "mutate_add_field_severity_weird_other"
