--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -129,7 +129,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   opensearch:
-    image: malcolmnetsec/opensearch:5.2.4
+    image: malcolmnetsec/opensearch:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -167,7 +167,7 @@ services:
       retries: 3
       start_period: 180s
   dashboards-helper:
-    image: malcolmnetsec/dashboards-helper:5.2.4
+    image: malcolmnetsec/dashboards-helper:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -195,7 +195,7 @@ services:
       retries: 3
       start_period: 30s
   dashboards:
-    image: malcolmnetsec/dashboards:5.2.4
+    image: malcolmnetsec/dashboards:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -216,7 +216,7 @@ services:
       retries: 3
       start_period: 210s
   logstash:
-    image: malcolmnetsec/logstash-oss:5.2.4
+    image: malcolmnetsec/logstash-oss:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -257,7 +257,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:5.2.4
+    image: malcolmnetsec/filebeat-oss:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -284,6 +284,7 @@ services:
     volumes:
       - nginx-log-path:/data/nginx:ro
       - ./zeek-logs:/data/zeek
+      - ./suricata-logs:/data/suricata
       - ./filebeat/certs/ca.crt:/certs/ca.crt:ro
       - ./filebeat/certs/client.crt:/certs/client.crt:ro
       - ./filebeat/certs/client.key:/certs/client.key:ro
@@ -294,7 +295,7 @@ services:
       retries: 3
       start_period: 60s
   arkime:
-    image: malcolmnetsec/arkime:5.2.4
+    image: malcolmnetsec/arkime:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -332,7 +333,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:5.2.4
+    image: malcolmnetsec/zeek:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -361,7 +362,7 @@ services:
       retries: 3
       start_period: 60s
   file-monitor:
-    image: malcolmnetsec/file-monitor:5.2.4
+    image: malcolmnetsec/file-monitor:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -384,7 +385,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:5.2.4
+    image: malcolmnetsec/pcap-capture:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -404,7 +405,7 @@ services:
     volumes:
       - ./pcap/upload:/pcap
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:5.2.4
+    image: malcolmnetsec/pcap-monitor:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -427,7 +428,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:5.2.4
+    image: malcolmnetsec/file-upload:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -453,7 +454,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:5.2.4
+    image: malcolmnetsec/htadmin:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -475,7 +476,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:5.2.4
+    image: malcolmnetsec/freq:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -493,7 +494,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:5.2.4
+    image: malcolmnetsec/name-map-ui:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -514,7 +515,7 @@ services:
       retries: 3
       start_period: 60s
   api:
-    image: malcolmnetsec/api:5.2.4
+    image: malcolmnetsec/api:5.3.0
     command: gunicorn --bind 0:5000 manage:app
     restart: "no"
     stdin_open: false
@@ -532,7 +533,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:5.2.4
+    image: malcolmnetsec/nginx-proxy:5.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -568,29 +569,22 @@ services:
       retries: 3
       start_period: 120s
   suricata:
-    build: 
-      context: .
-      dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata
+    image: malcolmnetsec/suricata:5.3.0
     restart: "no"
     stdin_open: false
-    tty: true 
+    tty: true
     hostname: suricata
     environment:
       << : *process-variables
       << : *logstash-variables
+      << : *common-upload-variables
     depends_on:
       - logstash
     volumes:
-      - /data/suricata/log:/var/log/suricata
+      - ./suricata-logs:/var/log/suricata
       - ./pcap:/data/pcap
     expose:
       - 8711
-    cap_add:
-     - NET_ADMIN
-     - SYS_NICE
-     - NET_RAW
-    network_mode: host
     healthcheck:
       test: ["CMD", "curl", "--insecure", "--silent", "https://localhost:443"]
       interval: 30s
