suricata-parse debug statements

--- a/logstash/pipelines/suricata/01_input_suricata.conf
+++ b/logstash/pipelines/suricata/01_input_suricata.conf
@@ -5,8 +5,24 @@ input {
 }
 
 filter {
+
+  ruby {
+    id => "ruby_suricata_filter_1"
+    code => "
+            File.write('log.txt', 'Filter_1!\n', mode: 'a')
+            "
+  }
+
   # this pipeline only needs to see suricata logs forwarded from filebeat
   if ("_filebeat_suricata" in [tags]) {
+
+    ruby {
+      id => "ruby_suricata_filter_2"
+      code => "
+              File.write('log.txt', 'Filter_2!\n', mode: 'a')
+              "
+    }
+
     mutate { id => "mutate_filebeat_suricata_forward_tag_remove"
              remove_tag => [ "_filebeat_suricata" ] }
   } else {
