logstash parsing tweaks:
- don't need to explicitly "convert" all the int/float/whatever fields, the template itself should take care of that
- fix the types of zeek.bsap_ip_header.num_msg and zeek.bsap_ip_header.type_name as they were reversed

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -169,8 +169,8 @@ zeek.bestguess.category=db:zeek.bestguess.category;group:zeek_bestguess;kind:ter
 
 # bsap_ip_header.log
 # https://github.com/cisagov/ICSNPP/tree/master/zeek_bsap_ip_parser
-zeek.bsap_ip_header.num_msg=db:zeek.bsap_ip_header.num_msg;group:zeek_bsap;kind:termfield;friendly:Functions per Message;help:Functions per Message
-zeek.bsap_ip_header.type_name=db:zeek.bsap_ip_header.type_name;group:zeek_bsap;kind:integer;friendly:Message Type;help:Message Type
+zeek.bsap_ip_header.num_msg=db:zeek.bsap_ip_header.num_msg;group:zeek_bsap;kind:integer;friendly:Functions per Message;help:Functions per Message
+zeek.bsap_ip_header.type_name=db:zeek.bsap_ip_header.type_name;group:zeek_bsap;kind:termfield;friendly:Message Type;help:Message Type
 
 # bsap_ip_rdb.log
 # https://github.com/cisagov/ICSNPP/tree/master/zeek_bsap_ip_parser
