--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -158,6 +158,9 @@ filter {
   if ([zeek][bacnet_property][pdu_service])      { mutate { id => "mutate_merge_normalize_zeek_bacnet_property_pdu_service"
                                                            merge => { "[event][action]" => "[zeek][bacnet_property][pdu_service]" } } }
 
+  if ([zeek][bsap_ip_header][type_name])         { mutate { id => "mutate_merge_normalize_zeek_bsap_ip_header_type_name"
+                                                            merge => { "[event][action]" => "[zeek][bsap_ip_header][type_name]" } } }
+
   if ([zeek][bsap_ip_rdb]) {
     ruby {
       # action = zeek_bsap_ip_rdb.app_func_code:zeek_bsap_ip_rdb.func_code
