allow setting pipeline.workers for logstash as using the default (the number of cores) can lead to out of heap memory errors with the number of pipelines I have

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -91,6 +91,7 @@ x-dashboards-helper-variables: &dashboards-helper-variables
   ISM_SNAPSHOT_REPO : 'logs'
 
 x-logstash-variables: &logstash-variables
+  pipeline.workers : 4
   LOGSTASH_OUI_LOOKUP       : 'true'
   LOGSTASH_SEVERITY_SCORING : 'true'
   LOGSTASH_REVERSE_DNS      : 'false'
