--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -125,11 +125,14 @@ x-pcap-capture-variables: &pcap-capture-variables
   PCAP_ROTATE_MEGABYTES : 1024
   PCAP_ROTATE_MINUTES : 10
   PCAP_FILTER : ''
+
+x-suricata-variables: &suricata-variables
+  SURICATA_AUTO_ANALYZE_PCAP_FILES: 'true'
 ################################################################################
 
 services:
   opensearch:
-    image: malcolmnetsec/opensearch:5.3.0
+    image: malcolmnetsec/opensearch:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -167,7 +170,7 @@ services:
       retries: 3
       start_period: 180s
   dashboards-helper:
-    image: malcolmnetsec/dashboards-helper:5.3.0
+    image: malcolmnetsec/dashboards-helper:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -195,7 +198,7 @@ services:
       retries: 3
       start_period: 30s
   dashboards:
-    image: malcolmnetsec/dashboards:5.3.0
+    image: malcolmnetsec/dashboards:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -216,7 +219,7 @@ services:
       retries: 3
       start_period: 210s
   logstash:
-    image: malcolmnetsec/logstash-oss:5.3.0
+    image: malcolmnetsec/logstash-oss:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -257,7 +260,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:5.3.0
+    image: malcolmnetsec/filebeat-oss:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -295,7 +298,7 @@ services:
       retries: 3
       start_period: 60s
   arkime:
-    image: malcolmnetsec/arkime:5.3.0
+    image: malcolmnetsec/arkime:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -333,7 +336,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:5.3.0
+    image: malcolmnetsec/zeek:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -362,7 +365,7 @@ services:
       retries: 3
       start_period: 60s
   file-monitor:
-    image: malcolmnetsec/file-monitor:5.3.0
+    image: malcolmnetsec/file-monitor:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -385,7 +388,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:5.3.0
+    image: malcolmnetsec/pcap-capture:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -405,7 +408,7 @@ services:
     volumes:
       - ./pcap/upload:/pcap
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:5.3.0
+    image: malcolmnetsec/pcap-monitor:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -428,7 +431,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:5.3.0
+    image: malcolmnetsec/file-upload:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -454,7 +457,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:5.3.0
+    image: malcolmnetsec/htadmin:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -476,7 +479,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:5.3.0
+    image: malcolmnetsec/freq:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -494,7 +497,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:5.3.0
+    image: malcolmnetsec/name-map-ui:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -515,7 +518,7 @@ services:
       retries: 3
       start_period: 60s
   api:
-    image: malcolmnetsec/api:5.3.0
+    image: malcolmnetsec/api:5.2.5
     command: gunicorn --bind 0:5000 manage:app
     restart: "no"
     stdin_open: false
@@ -533,7 +536,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:5.3.0
+    image: malcolmnetsec/nginx-proxy:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -569,7 +572,7 @@ services:
       retries: 3
       start_period: 120s
   suricata:
-    image: malcolmnetsec/suricata:5.3.0
+    image: malcolmnetsec/suricata:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
