--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,9 @@ x-pcap-capture-variables: &pcap-capture-variables
   PCAP_ROTATE_MEGABYTES : 1024
   PCAP_ROTATE_MINUTES : 10
   PCAP_FILTER : ''
+
+x-suricata-variables: &suricata-variables
+  SURICATA_AUTO_ANALYZE_PCAP_FILES: 'true'
 ################################################################################
 
 services:
@@ -132,7 +135,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/opensearch.Dockerfile
-    image: malcolmnetsec/opensearch:5.3.0
+    image: malcolmnetsec/opensearch:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -173,7 +176,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards-helper.Dockerfile
-    image: malcolmnetsec/dashboards-helper:5.3.0
+    image: malcolmnetsec/dashboards-helper:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -204,7 +207,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards.Dockerfile
-    image: malcolmnetsec/dashboards:5.3.0
+    image: malcolmnetsec/dashboards:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -228,7 +231,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:5.3.0
+    image: malcolmnetsec/logstash-oss:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -274,7 +277,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:5.3.0
+    image: malcolmnetsec/filebeat-oss:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -316,7 +319,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/arkime.Dockerfile
-    image: malcolmnetsec/arkime:5.3.0
+    image: malcolmnetsec/arkime:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -360,7 +363,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:5.3.0
+    image: malcolmnetsec/zeek:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -393,7 +396,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:5.3.0
+    image: malcolmnetsec/file-monitor:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -419,7 +422,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:5.3.0
+    image: malcolmnetsec/pcap-capture:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -442,7 +445,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: malcolmnetsec/pcap-monitor:5.3.0
+    image: malcolmnetsec/pcap-monitor:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -468,7 +471,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:5.3.0
+    image: malcolmnetsec/file-upload:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -494,7 +497,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:5.3.0
+    image: malcolmnetsec/htadmin:5.2.5
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -519,7 +522,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:5.3.0
+    image: malcolmnetsec/freq:5.2.5
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -540,7 +543,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:5.3.0
+    image: malcolmnetsec/name-map-ui:5.2.5
     build:
       context: .
       dockerfile: Dockerfiles/name-map-ui.Dockerfile
@@ -564,7 +567,7 @@ services:
       retries: 3
       start_period: 60s
   api:
-    image: malcolmnetsec/api:5.3.0
+    image: malcolmnetsec/api:5.2.5
     build:
       context: .
       dockerfile: Dockerfiles/api.Dockerfile
@@ -588,7 +591,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:5.3.0
+    image: malcolmnetsec/nginx-proxy:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -628,7 +631,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata:5.3.0
+    image: malcolmnetsec/suricata:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
