Add Suricata Options during Installation v2

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -582,6 +582,7 @@ services:
       << : *process-variables
       << : *logstash-variables
       << : *common-upload-variables
+      << : *suricata-vartiables
     depends_on:
       - logstash
     volumes:
