--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -641,6 +641,7 @@ services:
       << : *process-variables
       << : *logstash-variables
       << : *common-upload-variables
+      << : *suricata-variables
     depends_on:
       - logstash
     volumes:
