--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,6 +126,9 @@ x-pcap-capture-variables: &pcap-capture-variables
   PCAP_ROTATE_MEGABYTES : 1024
   PCAP_ROTATE_MINUTES : 10
   PCAP_FILTER : ''
+
+x-suricata-variables: &suricata-variables
+  SURICATA_AUTO_ANALYZE_PCAP_FILES: 'true'
 ################################################################################
 
 services:
@@ -133,7 +136,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/opensearch.Dockerfile
-    image: malcolmnetsec/opensearch:5.3.0
+    image: malcolmnetsec/opensearch:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -174,7 +177,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards-helper.Dockerfile
-    image: malcolmnetsec/dashboards-helper:5.3.0
+    image: malcolmnetsec/dashboards-helper:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -205,7 +208,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards.Dockerfile
-    image: malcolmnetsec/dashboards:5.3.0
+    image: malcolmnetsec/dashboards:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -229,7 +232,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:5.3.0
+    image: malcolmnetsec/logstash-oss:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -275,7 +278,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:5.3.0
+    image: malcolmnetsec/filebeat-oss:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -318,7 +321,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/arkime.Dockerfile
-    image: malcolmnetsec/arkime:5.3.0
+    image: malcolmnetsec/arkime:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -362,7 +365,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:5.3.0
+    image: malcolmnetsec/zeek:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -395,7 +398,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:5.3.0
+    image: malcolmnetsec/file-monitor:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -421,7 +424,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:5.3.0
+    image: malcolmnetsec/pcap-capture:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -444,7 +447,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: malcolmnetsec/pcap-monitor:5.3.0
+    image: malcolmnetsec/pcap-monitor:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -470,7 +473,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:5.3.0
+    image: malcolmnetsec/file-upload:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -496,7 +499,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:5.3.0
+    image: malcolmnetsec/htadmin:5.2.5
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -521,7 +524,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:5.3.0
+    image: malcolmnetsec/freq:5.2.5
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -542,7 +545,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:5.3.0
+    image: malcolmnetsec/name-map-ui:5.2.5
     build:
       context: .
       dockerfile: Dockerfiles/name-map-ui.Dockerfile
@@ -566,7 +569,7 @@ services:
       retries: 3
       start_period: 60s
   api:
-    image: malcolmnetsec/api:5.3.0
+    image: malcolmnetsec/api:5.2.5
     build:
       context: .
       dockerfile: Dockerfiles/api.Dockerfile
@@ -590,7 +593,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:5.3.0
+    image: malcolmnetsec/nginx-proxy:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -630,7 +633,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata:5.3.0
+    image: malcolmnetsec/suricata:5.2.5
     restart: "no"
     stdin_open: false
     tty: true
@@ -639,6 +642,7 @@ services:
       << : *process-variables
       << : *logstash-variables
       << : *common-upload-variables
+      << : *suricata-variables
     depends_on:
       - logstash
     volumes:
