--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -52,7 +52,7 @@ filebeat.inputs:
 
 - type: log
   paths:
-    - ${FILEBEAT_ZEEK_LOG_PATH:/data/zeek/current}/eve.json 
+    - ${FILEBEAT_SURICATA_LOG_PATH:/data/suricata}/eve.json 
   symlinks: true
   fields_under_root: true
   tags: ["_filebeat_suricata"]
