--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -7,13 +7,36 @@ filter {
                 }
 
                 # I recommend renaming the fields below to be consistent with other log sources.  This makes it easy to "pivot" between logs
-
                 # mutate {
-                #         rename => [ "src_ip", "source_ip" ]
-                #         rename => [ "dest_ip", "destination_ip" ]
-                #         rename => [ "src_port", "source_port" ]
-                #         rename => [ "dest_port", "destination_port" ]       
+                #         rename => [ "src_ip", "source.ip" ]
+                #         rename => [ "dest_ip", "destination.ip" ]
+                #         rename => [ "src_port", "source.port" ]
+                #         rename => [ "dest_port", "destination.port" ]
+                #         rename => [ "timestamp", "ts" ]
+                #         rename => [ "event_type", "event.type" ]
+                #         rename => [ "proto", "network.transport" ]
+                #         rename => [ ]
                 # }
+                #if [event_type] == "alert" {
+                #         if [alert][severity] == 1 {
+                #                 mutate {
+                #                         add_field => { "severity" => "High" }
+                #                 }
+                #         }
+                #         if [alert][severity] == 2 {
+                #                 mutate {
+                #                         add_field => { "severity" => "Medium" }
+                #                 }
+                #         }
+                #         if [alert][severity] == 3 {
+                #                 mutate {
+                #                         add_field => { "severity" => "Low" }
+                #                 }
+                #         }
+                #  }
+                #
+                #
+
 
                 ruby {
                         id => "ruby_suricata_hello_world"
