--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -1,5 +1,12 @@
 filter {
 
+        ruby {
+                id => "ruby_suricata_filter_3"
+                code => "
+                        File.write('log.txt', 'filter_3!\n', mode: 'a')
+                        "
+        }
+
         # If message looks like json, try to parse it as such. Otherwise, fall back to csv or grok.
         if [message] =~ /^{.*}$/ {
                 json {
