added example workflow files for BYU capstone team to build with github

--- a/.github/workflows/api-build-and-push-ghcr.yml
+++ b/.github/workflows/api-build-and-push-ghcr.yml
@@ -3,8 +3,7 @@ name: api-build-and-push-ghcr
 on:
   push:
     branches:
-      - main
-      - development
+      - logstash_pipeline
     paths:
       - 'api/**'
       - 'Dockerfiles/api.Dockerfile'
