--- a/.github/workflows/filebeat-build-and-push-ghcr.yml
+++ b/.github/workflows/filebeat-build-and-push-ghcr.yml
@@ -3,8 +3,7 @@ name: filebeat-build-and-push-ghcr
 on:
   push:
     branches:
-      - main
-      - development
+      - logstash_pipeline
     paths:
       - 'filebeat/**'
       - 'Dockerfiles/filebeat.Dockerfile'
