--- a/.github/workflows/name-map-ui-build-and-push-ghcr.yml
+++ b/.github/workflows/name-map-ui-build-and-push-ghcr.yml
@@ -3,8 +3,7 @@ name: name-map-ui-build-and-push-ghcr
 on:
   push:
     branches:
-      - main
-      - development
+      - logstash_pipeline
     paths:
       - 'name-map-ui/**'
       - 'Dockerfiles/name-map-ui.Dockerfile'
