--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -19,25 +19,34 @@ filter {
                 #         rename => [ "dest_ip", "destination.ip" ]
                 #         rename => [ "src_port", "source.port" ]
                 #         rename => [ "dest_port", "destination.port" ]
-                #         rename => [ "timestamp", "ts" ]
-                #         rename => [ "event_type", "event.type" ]
-                #         rename => [ "proto", "network.transport" ]  
-                #         rename => [ ]    
+                #         rename => [ "timestamp", "@timestamp" ]
+                #         rename => [ "event_type", "event.type" ] #needs to be added to Malcolm
+                #         rename => [ "proto", "network.transport" ]
+                #         For Alert Fields
+                #         rename => [ "alert.gid", "event.id" ] # May not be the right field to rename
+                #         rename => [ "alert.action", "event.action" ] # May not be the right field to rename
+                #         rename => [ "alert.signature_id", "suricata.signatures.signature_id" ] # May not be the right field to rename, Needs to be added to Malcolm
+                #         rename => [ "alert.signature", "suricata.signatures.event_message" ] # May not be the right field to rename, Needs to be added to Malcolm
+                #         rename => [ "alert.app_proto", "network.protocol" ] # May not be the right field to rename
+                #         rename => [ "alert.rev", "suricata.signatures.signature_revision" ] # May not be the right field to rename, Needs to be added to Malcolm
+                #         rename => [ "alert.severity", "event.severity" ] # May not be the right field to rename, Needs to be added to Malcolm
+                #         rename => [ "alert.category", "event.category" ] # May not be the right field to rename
+                #         Keep pcap name, use something logical fields?   
                 # }
                 #if [event_type] == "alert" {
                 #         if [alert][severity] == 1 {
                 #                 mutate {
-                #                         add_field => { "severity" => "High" }
+                #                         add_field => { "event.severity_name" => "High" } # Not in common schema, still think it would be helpful, needs to be added to Malcolm
                 #                 }
                 #         }
                 #         if [alert][severity] == 2 {
                 #                 mutate {
-                #                         add_field => { "severity" => "Medium" }
+                #                         add_field => { "event.severity_name" => "Medium" }
                 #                 }
                 #         }
                 #         if [alert][severity] == 3 {
                 #                 mutate {
-                #                         add_field => { "severity" => "Low" }
+                #                         add_field => { "event.severity_name" => "Low" }
                 #                 }
                 #         }
                 #  }
