added suricata deb install, rules directory

--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -57,6 +57,9 @@ export ZEEK_DISABLE_SPICY_TAILSCALE=
 export ZEEK_DISABLE_SPICY_TFTP=
 export ZEEK_DISABLE_SPICY_WIREGUARD=
 
+# Suricata
+export SURICATA_RULES_DIR=/etc/suricata/rules
+
 # affects Arkime only for now: beats values are stored in keystores per-beat
 export OS_PROTOCOL=https
 export OS_HOST=127.0.0.1
