--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -83,16 +83,18 @@ export ZEEK_FILE_SCAN_VTOT=false
 export ZEEK_FILE_SCAN_YARA=false
 export ZEEK_FILE_SCAN_CAPA=false
 
+export AUTOSTART_ARKIME=false
 export AUTOSTART_AUDITBEAT=false
 export AUTOSTART_CLAMAV_UPDATES=false
 export AUTOSTART_FILEBEAT=false
 export AUTOSTART_HEATBEAT=false
 export AUTOSTART_HEATBEAT_SENSORS=false
 export AUTOSTART_METRICBEAT=false
-export AUTOSTART_ARKIME=false
 export AUTOSTART_NETSNIFF=false
 export AUTOSTART_PRUNE_PCAP=false
 export AUTOSTART_PRUNE_ZEEK=false
+export AUTOSTART_SURICATA=false
+export AUTOSTART_SURICATA_UPDATES=false
 export AUTOSTART_SYSLOGBEAT=false
 export AUTOSTART_TCPDUMP=false
 export AUTOSTART_ZEEK=false
