more suricata config

--- a/sensor-iso/interface/sensor_ctl/supervisor.d/suricata.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/suricata.conf
@@ -19,7 +19,7 @@ killasgroup=true
 [program:suricata-service]
 command=/usr/bin/suricata
   -v
-  -c /etc/suricata/suricata.yaml
+  -c /opt/sensor/sensor_ctl/suricata/suricata.yaml
   -l /opt/sensor/sensor_ctl/suricata/logs
   --pidfile /opt/sensor/sensor_ctl/suricata/suricata.pid
   --af-packet
