--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -58,7 +58,22 @@ export ZEEK_DISABLE_SPICY_TFTP=
 export ZEEK_DISABLE_SPICY_WIREGUARD=
 
 # Suricata
+export SURICATA_AF_PACKET_BLOCK_SIZE=32768
+export SURICATA_AF_PACKET_BLOCK_TIMEOUT=10
+export SURICATA_AF_PACKET_BUFFER_SIZE=32768
+export SURICATA_AF_PACKET_CHECKSUM_CHECKS=kernel
+export SURICATA_AF_PACKET_CLUSTER_TYPE=cluster_flow
+export SURICATA_AF_PACKET_DEFRAG=yes
+export SURICATA_AF_PACKET_EMERGENCY_FLUSH=no
+export SURICATA_AF_PACKET_IFACE_THREADS=auto
+export SURICATA_AF_PACKET_MMAP_LOCKED=yes
+export SURICATA_AF_PACKET_RING_SIZE=2048
+export SURICATA_AF_PACKET_TPACKET_V3=yes
+export SURICATA_AF_PACKET_USE_MMAP=yes
+export SURICATA_CAPTURE_CHECKSUM_VALIDATION=none
+export SURICATA_CAPTURE_DISABLE_OFFLOADING=true
 export SURICATA_RULES_DIR=/etc/suricata/rules
+export SURICATA_MANAGED_RULES_DIR=/var/lib/suricata/rules
 
 # affects Arkime only for now: beats values are stored in keystores per-beat
 export OS_PROTOCOL=https
