Finishedgit add arkime/etc/config.ini

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -1610,28 +1610,28 @@ suricata.stats.decoder.event.ipv6.exthdr_dupl_fh=db.suricata.stats.decoder.event
 suricata.stats.decoder.event.ipv6.exthdr_dupl_hh=db.suricata.stats.decoder.event.ipv6.exthdr_dupl_hh;group:suricata;kind:integer;friendly:ST_DEI6_ED_HH;help:Suricata Stats Decoder Event IPv6 External Header Duplicate HH
 suricata.stats.decoder.event.ipv6.exthdr_dupl_rh=db.suricata.stats.decoder.event.ipv6.exthdr_dupl_rh;group:suricata;kind:integer;friendly:ST_DEI6_ED_RH;help:Suricata Stats Decoder Event IPv6 External Header Duplicate RH
 suricata.stats.decoder.event.ipv6.exthdr_dupl_eh=db.suricata.stats.decoder.event.ipv6.exthdr_dupl_eh;group:suricata;kind:integer;friendly:ST_DEI6_ED_EH;help:Suricata Stats Decoder Event IPv6 External Header Duplicate EH
-suricata.stats.decoder.event.ipv6.exthdr_invalid_optlen=db.suricata.stats.decoder.event.ipv6.exthdr_invalid_optlen
-suricata.stats.decoder.event.ipv6.exthdr_useless_fh=db.suricata.stats.decoder.event.ipv6.exthdr_useless_fh
-suricata.stats.decoder.event.ipv6.fh_non_zero_reserved_field=db.suricata.stats.decoder.event.ipv6.fh_non_zero_reserved_field
-suricata.stats.decoder.event.ipv6.frag_ignored=db.suricata.stats.decoder.event.ipv6.frag_ignored
-suricata.stats.decoder.event.ipv6.frag_overlap=db.suricata.stats.decoder.event.ipv6.frag_overlap
-suricata.stats.decoder.event.ipv6.frag_pkt_too_large=db.suricata.stats.decoder.event.ipv6.frag_pkt_too_large
-suricata.stats.decoder.event.ipv6.hopopts_only_padding=db.suricata.stats.decoder.event.ipv6.hopopts_only_padding
-suricata.stats.decoder.event.ipv6.hopopts_unknown_opt=db.suricata.stats.decoder.event.ipv6.hopopts_unknown_opt
-suricata.stats.decoder.event.ipv6.icmpv4=db.suricata.stats.decoder.event.ipv6.icmpv4
-suricata.stats.decoder.event.ipv6.ipv4_in_ipv6_too_small=db.suricata.stats.decoder.event.ipv6.ipv4_in_ipv6_too_small
-suricata.stats.decoder.event.ipv6.ipv4_in_ipv6_wrong_version=db.suricata.stats.decoder.event.ipv6.ipv4_in_ipv6_wrong_version
-suricata.stats.decoder.event.ipv6.ipv6_in_ipv6_too_small=db.suricata.stats.decoder.event.ipv6.ipv6_in_ipv6_too_small
-suricata.stats.decoder.event.ipv6.ipv6_in_ipv6_wrong_version=db.suricata.stats.decoder.event.ipv6.ipv6_in_ipv6_wrong_version
-suricata.stats.decoder.event.ipv6.pkt_too_small=db.suricata.stats.decoder.event.ipv6.pkt_too_small
-suricata.stats.decoder.event.ipv6.rh_type_0=db.suricata.stats.decoder.event.ipv6.rh_type_0
-suricata.stats.decoder.event.ipv6.trunc_exthdr=db.suricata.stats.decoder.event.ipv6.trunc_exthdr
-suricata.stats.decoder.event.ipv6.trunc_pkt=db.suricata.stats.decoder.event.ipv6.trunc_pkt
-suricata.stats.decoder.event.ipv6.unknown_next_header=db.suricata.stats.decoder.event.ipv6.unknown_next_header
-suricata.stats.decoder.event.ipv6.wrong_ip_version=db.suricata.stats.decoder.event.ipv6.wrong_ip_version
-suricata.stats.decoder.event.ipv6.zero_len_padn=db.suricata.stats.decoder.event.ipv6.zero_len_padn
-suricata.stats.decoder.event.ltnull.pkt_too_small=db.suricata.stats.decoder.event.ltnull.pkt_too_small
-suricata.stats.decoder.event.ltnull.unsupported_type=db.suricata.stats.decoder.event.ltnull.unsupported_type
+suricata.stats.decoder.event.ipv6.exthdr_invalid_optlen=db.suricata.stats.decoder.event.ipv6.exthdr_invalid_optlen;group:suricata;kind:integer;friendly:ST_DEI6_EHIO;help:Suricata Stats Decoder Event IPv6 External Header Invalid Option
+suricata.stats.decoder.event.ipv6.exthdr_useless_fh=db.suricata.stats.decoder.event.ipv6.exthdr_useless_fh;group:suricata;kind:integer;friendly:ST_DEI6_EHUF;help:Suricata Stats Decoder Event IPv6 External Header Useless FH
+suricata.stats.decoder.event.ipv6.fh_non_zero_reserved_field=db.suricata.stats.decoder.event.ipv6.fh_non_zero_reserved_field;group:suricata;kind:integer;friendly:ST_DEI6_FHNZRF;help:Suricata Stats Decoder Event IPv6 FH Non-zero reserved field
+suricata.stats.decoder.event.ipv6.frag_ignored=db.suricata.stats.decoder.event.ipv6.frag_ignored;group:suricata;kind:integer;friendly:ST_DEI6_FI;help:Suricata Stats Decoder Event IPv6 Frag Ignored
+suricata.stats.decoder.event.ipv6.frag_overlap=db.suricata.stats.decoder.event.ipv6.frag_overlap;group:suricata;kind:integer;friendly:ST_DEI6_FO;help:Suricata Stats Decoder Event IPv6 Frag Overlap
+suricata.stats.decoder.event.ipv6.frag_pkt_too_large=db.suricata.stats.decoder.event.ipv6.frag_pkt_too_large;group:suricata;kind:integer;friendly:ST_DEI6_FPTL;help:Suricata Stats Decoder Event IPv6 Frag Packet Too Large
+suricata.stats.decoder.event.ipv6.hopopts_only_padding=db.suricata.stats.decoder.event.ipv6.hopopts_only_padding;group:suricata;kind:integer;friendly:ST_DEI6_HOP;help:Suricata Stats Decoder Event IPv6 Hopopts Only Padding
+suricata.stats.decoder.event.ipv6.hopopts_unknown_opt=db.suricata.stats.decoder.event.ipv6.hopopts_unknown_opt;group:suricata;kind:integer;friendly:ST_DEI6_HUO;help:Suricata Stats Decoder Event IPv6 Hopopts Unknown Opt
+suricata.stats.decoder.event.ipv6.icmpv4=db.suricata.stats.decoder.event.ipv6.icmpv4;group:suricata;kind:integer;friendly:ST_DEI6_ED_EH;help:Suricata Stats Decoder Event IPv6 Icmpv4
+suricata.stats.decoder.event.ipv6.ipv4_in_ipv6_too_small=db.suricata.stats.decoder.event.ipv6.ipv4_in_ipv6_too_small;group:suricata;kind:integer;friendly:ST_DEI4I6_TS;help:Suricata Stats Decoder Event Icmpv4 in IPv6 Too Small
+suricata.stats.decoder.event.ipv6.ipv4_in_ipv6_wrong_version=db.suricata.stats.decoder.event.ipv6.ipv4_in_ipv6_wrong_version;group:suricata;kind:integer;friendly:ST_DEI4I6_WV;help:Suricata Stats Decoder Icmpv4 in IPv6 Wrong Version
+suricata.stats.decoder.event.ipv6.ipv6_in_ipv6_too_small=db.suricata.stats.decoder.event.ipv6.ipv6_in_ipv6_too_small;group:suricata;kind:integer;friendly:ST_DEI6I6_TS;help:Suricata Stats Decoder IPv6 in IPv6 Too Small
+suricata.stats.decoder.event.ipv6.ipv6_in_ipv6_wrong_version=db.suricata.stats.decoder.event.ipv6.ipv6_in_ipv6_wrong_version;group:suricata;kind:integer;friendly:ST_DEI6I6_WV;help:Suricata Stats Decoder IPv6 in IPv6 Wrong Version
+suricata.stats.decoder.event.ipv6.pkt_too_small=db.suricata.stats.decoder.event.ipv6.pkt_too_small;group:suricata;kind:integer;friendly:ST_DEI6_TS;help:Suricata Stats Decoder IPv6 Packet too small
+suricata.stats.decoder.event.ipv6.rh_type_0=db.suricata.stats.decoder.event.ipv6.rh_type_0;group:suricata;kind:integer;friendly:ST_DEI6_RH0;help:Suricata Stats Decoder IPv6 RH Type 0
+suricata.stats.decoder.event.ipv6.trunc_exthdr=db.suricata.stats.decoder.event.ipv6.trunc_exthdr;group:suricata;kind:integer;friendly:ST_DEI6_TEH;help:Suricata Stats Decoder IPv6 Trunc. External Header
+suricata.stats.decoder.event.ipv6.trunc_pkt=db.suricata.stats.decoder.event.ipv6.trunc_pkt;group:suricata;kind:integer;friendly:ST_DEI6_TP;help:Suricata Stats Decoder IPv6 Trunc. Packet
+suricata.stats.decoder.event.ipv6.unknown_next_header=db.suricata.stats.decoder.event.ipv6.unknown_next_header;group:suricata;kind:integer;friendly:ST_DEI6_UNH;help:Suricata Stats Decoder IPv6 Unknown Next Header
+suricata.stats.decoder.event.ipv6.wrong_ip_version=db.suricata.stats.decoder.event.ipv6.wrong_ip_version;group:suricata;kind:integer;friendly:ST_DEI6I6_WIP;help:Suricata Stats Decoder IPv6 Wrong IP Version
+suricata.stats.decoder.event.ipv6.zero_len_padn=db.suricata.stats.decoder.event.ipv6.zero_len_padn;group:suricata;kind:integer;friendly:ST_DEI6I6_ZLP;help:Suricata Stats Decoder IPv6 Zero Length Padding
+suricata.stats.decoder.event.ltnull.pkt_too_small=db.suricata.stats.decoder.event.ltnull.pkt_too_small;group:suricata;kind:integer;friendly:ST_DEL_PTS;help:Suricata Stats Decoder LtNull Packet Too Small
+suricata.stats.decoder.event.ltnull.unsupported_type=db.suricata.stats.decoder.event.ltnull.unsupported_type;group:suricata;kind:integer;friendly:ST_DEL_UT;help:Suricata Stats Decoder LtNull Unsupported Type
 suricata.stats.decoder.event.mpls.bad_label_implicit_null=db.suricata.stats.decoder.event.mpls.bad_label_implicit_null;group:suricata;kind:integer;friendly:ST_DEM_BLIN;help:Suricata decoder event mpls bad label implicit null
 suricata.stats.decoder.event.mpls.bad_label_reserved=db.suricata.stats.decoder.event.mpls.bad_label_reserved;group:suricata;kind:integer;friendly:ST_DEM_BLR;help:Suricata decoder event mpls bad label reserved
 suricata.stats.decoder.event.mpls.bad_label_router_alert=db.suricata.stats.decoder.event.mpls.bad_label_router_alert;group:suricata;kind:integer;friendly:ST_DEM_BLRA;help:Suricata decoder event mpls bad label router alert
