put suricata logs alongside zeek logs

--- a/sensor-iso/interface/sensor_ctl/supervisor.d/suricata.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/suricata.conf
@@ -20,7 +20,7 @@ killasgroup=true
 command=/usr/bin/suricata
   -v
   -c /opt/sensor/sensor_ctl/suricata/suricata.yaml
-  -l /opt/sensor/sensor_ctl/suricata/logs
+  -l "%(ENV_ZEEK_LOG_PATH)s/suricata"
   --pidfile /opt/sensor/sensor_ctl/suricata/suricata.pid
   --af-packet
 user=sensor
